<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF0000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/book_my_event_tv"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/tvBook"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/black" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvBook"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_1"
        android:gravity="center"
        android:hint="@string/first_name_et"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etFirstName"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_1"
        android:gravity="center"
        android:hint="@string/last_name_et"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etLastName"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_1"
        android:gravity="center"
        android:hint="@string/email_address_et"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmailAddress"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_1"
        android:gravity="center"
        android:hint="@string/phone_number_et"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPhoneNumber"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="50dp"
        android:background="@color/black"
        android:padding="15dp"
        android:text="@string/proceed_btn"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>